--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "require": {
     "php": ">=5.3.0",
-    "composer/installers": "*"
+    "composer/installers": "*",
+    "aws/aws-sdk-php": "2.6.14"
   }
 }
-
